@@ -13,6 +13,7 @@ TASpring change log
 * New weapon tdf tag corethickness, how thick the inner color of a laser is, this is a percentage value, default is 0.25
 * New weapon tdf tag laserflaresize, size of the flare for laser weapons, multiplier for thickness, default 15.
 * tdf tag duration is used for laser weapons.
+* edgeEffectivness added for weapons
 - Added limited fuel settings for units (only work for aircrafts so far, need a good mechanism for refueling other stuff)
 -  New fbi tag MaxFuel, max fuel in seconds that the unit can carry, default 0 = unlimited
 -  New fbi tag RefuelTime, how long time it takes to fully refuel the unit, default 5
